Add new translations

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -15,7 +15,7 @@
 	"Action": "Actie",
 	"Adventure": "Avontuur",
 	"Animation": "Animatie",
-	"Comedy": "Comedy",
+	"Comedy": "Komedie",
 	"Crime": "Misdaad",
 	"Documentary": "Documentaire",
 	"Drama": "Drama",
@@ -33,14 +33,13 @@
 	"War": "Oorlog",
 	"Musical": "Musical",
 	"Sport": "Sport",
-	": Any": ": Alle",
+	": Any": "Alle",
 	"Date": "Datum",
 	"Year": "Jaar",
 	"Rating": "Beoordeling",
 	"Alphabetic": "Alfabetisch",
 	"Play": "Afspelen",
 	"Trailer": "Trailer",
-	"Buy": "Kopen",
 	"Torrents": "Torrents",
 	"Most downloaded": "Populariteit",
 	"Science-Fiction": "Science-Fiction",
@@ -54,16 +53,16 @@
 	"Mini Series": "Mini Series",
 	"News": "Nieuws",
 	"Reality": "Reality",
-	"Soap": "Soap Series",
+	"Soap": "Soap",
 	"Special Interest": "Special Interest",
 	"Talk Show": "Talk Show",
-	"Updated": "Geupdate",
+	"Updated": "Recent",
 	"Name": "Naam",
 	"Episode list": "Afleveringen",
 	"episode": "aflevering",
 	"season": "seizoen",
 	"seasons": "seizoenen",
-	"Ended": "geëindigd",
+	"Ended": "Geëindigd",
 	"Continuing": "Doorlopend",
 	"Connecting": "Verbinden",
 	"Loading from source": "Laden vanaf bron",
@@ -97,6 +96,7 @@
 	"Added date": "Datum van uitzending",
 	"Torrent name": "Torrent naam",
 	"Settings": "Instellingen",
+	"Science Fiction": "Science Fiction",
 	"Default settings:": "Standaard instellingen:",
 	"Advanced settings:": "Geavanceerde instellingen:",
 	"Language:": "Taal:",
@@ -107,9 +107,9 @@
 	"Prefered subtitle:": "Standaard ondertiteling:",
 	"Restore defaults": "Standaard waarden",
 	"Saved": "Opgeslagen",
-	"Restored": "Gereset",
+	"Restored": "Reset succesvol",
 	"All seasons": "Alle seizoenen",
-    "Science Fiction": "Science Fiction",
+	"Buy": "Kopen",
 	"DHT:": "DHT:",
-	"Random": "Random"
+	"Random": "Willekeurig"
 }
