Fix encoding bug, add right click functionality

--- a/locales/en.json
+++ b/locales/en.json
@@ -111,5 +111,8 @@
 	"All seasons": "All seasons",
 	"Buy": "Buy",
 	"DHT:": "DHT:",
-	"Random": "Random"
+	"Random": "Random",
+	"Cut": "Cut",
+	"Copy": "Copy",
+	"Paste": "Paste"
 }
