Add error messages

--- a/locales/tr.json
+++ b/locales/tr.json
@@ -111,5 +111,8 @@
 	"All seasons": "Tüm Sezonlar",
 	"Buy": "Satın Al",
 	"DHT:": "DHT:",
-	"Random": "Rastgele"
+	"Random": "Rastgele",
+	"Cut": "Cut",
+	"Copy": "Copy",
+	"Paste": "Paste"
 }
