Add and edit languages

--- a/locales/be.json
+++ b/locales/be.json
@@ -111,5 +111,9 @@
     "All seasons": "Alle seizoenen",
     "Buy": "Kopen",
     "DHT:": "DHT:",
-    "Random": "Willekeurig"
+    "Random": "Willekeurig",
+    "Cut": "Knippen",
+    "Copy": "Kopieren",
+    "Paste": "Plakken",
+    "3D": "3D"
 }
