--- a/locales/de.json
+++ b/locales/de.json
@@ -1,115 +1,119 @@
 {
-    "Go back": "Zurück",
-    "Minimize": "Minimieren",
-    "Toggle fullscreen": "Vollbild",
-    "Close Flixtor": "Schließen",
-    "You are about to close the application. Are you sure you want to continue?": "Du bist dabei das Program zu schließen.<br>Bist du dir sicher das du fortfahren möchtest?",
-    "Confirm close": "Schließen bestätigen",
-    "Ok": "Ok",
-    "No": "Nein",
-    "Quit": "Schließen",
-    "Movies": "Filme",
-    "Series": "Serien",
-    "Movie title or magnet link...": "Film Titel oder Magnet Link...",
-    "All": "Alle",
-    "Action": "Action",
-    "Adventure": "Abenteuer",
-    "Animation": "Animation",
-    "Comedy": "Komödie",
-    "Crime": "Krimi",
-    "Documentary": "Dokumentation",
-    "Drama": "Drama",
-    "Family": "Familie",
-    "Fantasy": "Fantasy",
-    "Film-Noir": "Film-Noir",
-    "History": "Historie",
-    "Horror": "Horror",
-    "Music": "Musik",
-    "Mystery": "Mystery",
-    "Romance": "Romanze",
-    "Sci-Fi": "Sci-Fi",
-    "Thriller": "Thriller",
-    "Western": "Western",
-    "War": "Krieg",
-    "Musical": "Musical",
-    "Sport": "Sport",
-    ": Any": ": Beliebig",
-    "Date": "Datum",
-    "Year": "Jahr",
-    "Rating": "Bewertung",
-    "Alphabetic": "Alphabetisch",
-    "Play": "Starten",
-    "Trailer": "Trailer",
-    "Torrents": "Torrents",
-    "Most downloaded": "Meisten Downloads",
-    "Science-Fiction": "Science-Fiction",
-    "": "",
-    "Indie": "Indie",
-    "Suspense": "Spannung",
-    "Serie title...": "Serien Titel...",
-    "Children": "Kinder",
-    "Game Show": "Spiel Show",
-    "Home and Garden": "Haus und Garten",
-    "Mini Series": "Mini Serien",
-    "News": "News",
-    "Reality": "Realität",
-    "Soap": "Soap",
-    "Special Interest": "Spezielles Interesse",
-    "Talk Show": "Talk Show",
-    "Updated": "Aktualisiert",
-    "Name": "Name",
-    "Episode list": "Episoden Liste",
-    "episode": "Episode",
-    "season": "Staffel",
-    "seasons": "Staffeln",
-    "Ended": "Beendet",
-    "Continuing": "Wird fortgeführt",
-    "Connecting": "Verbinden",
-    "Loading from source": "Laden von Quelle",
-    "Cancel": "Abbrechen",
-    "Source": "Quelle",
-    "Quality": "Qualität",
-    "An error has occured": "Ein Fehler ist aufgetreten",
-    "The video player is unable to start the video. You can switch to VLC or select another source from the list.": "Der Video Player kann das Video nicht starten. Du kannst zu VLC wechseln oder eine andere Quelle aus der Liste auswählen.",
-    "Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)": "Hinweis: Wenn du zu VLC wechselst und die Meldung 'Couldn't load plug-in.' angezeigt bekommst, brauchst du die neueste Version von VLC (Web Plugin)",
-    "Switch to VLC": "Zu VLC wechseln",
-    "Info": "Info",
-    "Switch to Default player": "Zum Standard Player wechseln",
-    "No sound is playing from the video? You can try using VLC before selecting another source.": "Es wird kein Sound abgespielt? Versuche eine andere Quelle bevor du zu VLC wechselst.",
-    "Buffering": "Buffering",
-    "You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.": "Du kannst ausserdem die Quelle im Quellen Bereich auswählen wenn du möchtest. Das ist möglicherweise nützlich wenn die Standart Quelle nicht abgespielt werden kann.",
-    "Play episode": "Episode abspielen",
-    "Source info": "Quellen Info",
-    "Stop download": "Download stoppen",
-    "Episodes": "Episoden",
-    "Season": "Staffel",
-    "Episode": "Episode",
-    "selected": "ausgewählt",
-    "Torrent name...": "Torrent Name...",
-    "Seeds": "Seeds",
-    "Leechs": "Leechs",
-    "Lates": "Lates",
-    "Size": "Größe",
-    "Anime": "Anime",
-    "Videos": "Videos",
-    "Latest": "Neueste",
-    "Added date": "Hinzugefügt",
-    "Torrent name": "Torrent Name",
-    "Settings": "Einstellungen",
-    "Science Fiction": "Science Fiction",
-    "Default settings:": "Standard Einstellungen:",
-    "Advanced settings:": "Erweiterte Einstellungen:",
-    "Language:": "Sprache:",
-    "Streaming port:": "Streaming port:",
-    "Data directory:": "Daten Ordner:",
-    "Clear data on close:": "Lösche Daten beim schließen:",
-    "Connection limit:": "Verbindungs Limit:",
-    "Prefered subtitle:": "Bevorzugte Untertitel:",
-    "Restore defaults": "Standard wiederherstellen",
-    "Saved": "Gespeichert",
-    "Restored": "Wiederhergestellt",
-    "All seasons": "Alle Staffeln",
-    "Buy": "Kaufen",
-    "DHT:": "DHT:",
-    "Random": "Zufällig"
+	"Go back": "Zurück",
+	"Minimize": "Minimieren",
+	"Toggle fullscreen": "Vollbild",
+	"Close Flixtor": "Schließen",
+	"You are about to close the application. Are you sure you want to continue?": "Du bist dabei das Program zu schließen.<br>Bist du dir sicher das du fortfahren möchtest?",
+	"Confirm close": "Schließen bestätigen",
+	"Ok": "Ok",
+	"No": "Nein",
+	"Quit": "Schließen",
+	"Movies": "Filme",
+	"Series": "Serien",
+	"Movie title or magnet link...": "Film Titel oder Magnet Link...",
+	"All": "Alle",
+	"Action": "Action",
+	"Adventure": "Abenteuer",
+	"Animation": "Animation",
+	"Comedy": "Komödie",
+	"Crime": "Krimi",
+	"Documentary": "Dokumentation",
+	"Drama": "Drama",
+	"Family": "Familie",
+	"Fantasy": "Fantasy",
+	"Film-Noir": "Film-Noir",
+	"History": "Historie",
+	"Horror": "Horror",
+	"Music": "Musik",
+	"Mystery": "Mystery",
+	"Romance": "Romanze",
+	"Sci-Fi": "Sci-Fi",
+	"Thriller": "Thriller",
+	"Western": "Western",
+	"War": "Krieg",
+	"Musical": "Musical",
+	"Sport": "Sport",
+	": Any": ": Beliebig",
+	"Date": "Datum",
+	"Year": "Jahr",
+	"Rating": "Bewertung",
+	"Alphabetic": "Alphabetisch",
+	"Play": "Starten",
+	"Trailer": "Trailer",
+	"Torrents": "Torrents",
+	"Most downloaded": "Meisten Downloads",
+	"Science-Fiction": "Science-Fiction",
+	"": "",
+	"Indie": "Indie",
+	"Suspense": "Spannung",
+	"Serie title...": "Serien Titel...",
+	"Children": "Kinder",
+	"Game Show": "Spiel Show",
+	"Home and Garden": "Haus und Garten",
+	"Mini Series": "Mini Serien",
+	"News": "News",
+	"Reality": "Realität",
+	"Soap": "Soap",
+	"Special Interest": "Spezielles Interesse",
+	"Talk Show": "Talk Show",
+	"Updated": "Aktualisiert",
+	"Name": "Name",
+	"Episode list": "Episoden Liste",
+	"episode": "Episode",
+	"season": "Staffel",
+	"seasons": "Staffeln",
+	"Ended": "Beendet",
+	"Continuing": "Wird fortgeführt",
+	"Connecting": "Verbinden",
+	"Loading from source": "Laden von Quelle",
+	"Cancel": "Abbrechen",
+	"Source": "Quelle",
+	"Quality": "Qualität",
+	"An error has occured": "Ein Fehler ist aufgetreten",
+	"The video player is unable to start the video. You can switch to VLC or select another source from the list.": "Der Video Player kann das Video nicht starten. Du kannst zu VLC wechseln oder eine andere Quelle aus der Liste auswählen.",
+	"Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)": "Hinweis: Wenn du zu VLC wechselst und die Meldung 'Couldn't load plug-in.' angezeigt bekommst, brauchst du die neueste Version von VLC (Web Plugin)",
+	"Switch to VLC": "Zu VLC wechseln",
+	"Info": "Info",
+	"Switch to Default player": "Zum Standard Player wechseln",
+	"No sound is playing from the video? You can try using VLC before selecting another source.": "Es wird kein Sound abgespielt? Versuche eine andere Quelle bevor du zu VLC wechselst.",
+	"Buffering": "Buffering",
+	"You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.": "Du kannst ausserdem die Quelle im Quellen Bereich auswählen wenn du möchtest. Das ist möglicherweise nützlich wenn die Standart Quelle nicht abgespielt werden kann.",
+	"Play episode": "Episode abspielen",
+	"Source info": "Quellen Info",
+	"Stop download": "Download stoppen",
+	"Episodes": "Episoden",
+	"Season": "Staffel",
+	"Episode": "Episode",
+	"selected": "ausgewählt",
+	"Torrent name...": "Torrent Name...",
+	"Seeds": "Seeds",
+	"Leechs": "Leechs",
+	"Lates": "Lates",
+	"Size": "Größe",
+	"Anime": "Anime",
+	"Videos": "Videos",
+	"Latest": "Neueste",
+	"Added date": "Hinzugefügt",
+	"Torrent name": "Torrent Name",
+	"Settings": "Einstellungen",
+	"Science Fiction": "Science Fiction",
+	"Default settings:": "Standard Einstellungen:",
+	"Advanced settings:": "Erweiterte Einstellungen:",
+	"Language:": "Sprache:",
+	"Streaming port:": "Streaming port:",
+	"Data directory:": "Daten Ordner:",
+	"Clear data on close:": "Lösche Daten beim schließen:",
+	"Connection limit:": "Verbindungs Limit:",
+	"Prefered subtitle:": "Bevorzugte Untertitel:",
+	"Restore defaults": "Standard wiederherstellen",
+	"Saved": "Gespeichert",
+	"Restored": "Wiederhergestellt",
+	"All seasons": "Alle Staffeln",
+	"Buy": "Kaufen",
+	"DHT:": "DHT:",
+	"Random": "Zufällig",
+	"Cut": "Cut",
+	"Copy": "Copy",
+	"Paste": "Paste",
+	"3D": "3D"
 }
