--- a/locales/fr.json
+++ b/locales/fr.json
@@ -111,5 +111,9 @@
 	"All seasons": "Toutes les saisons",
 	"Buy": "Acheter",
 	"DHT:": "DHT :",
-	"Random": "Aléatoire"
+	"Random": "Aléatoire",
+	"Cut": "Cut",
+	"Copy": "Copy",
+	"Paste": "Paste",
+	"3D": "3D"
 }
