--- a/locales/gr.json
+++ b/locales/gr.json
@@ -1,115 +1,119 @@
 {
-    "Go back": "Πίσω",
-    "Minimize": "Ελαχιστοποίηση",
-    "Toggle fullscreen": "Πλήρης οθόνη",
-    "Close Flixtor": "Κλείσιμο",
-    "You are about to close the application. Are you sure you want to continue?": "Είστε έτοιμοι να κλείσετε την εφαρμογή. <br> Είστε βέβαιοι ότι θέλετε να συνεχίσετε;",
-    "Confirm close": "Επιβεβαίωση κλεισίματος",
-    "Ok": "ΟΚ",
-    "No": "Όχι",
-    "Quit": "Έξοδος",
-    "Movies": "Ταινίες",
-    "Series": "Σειρές",
-    "Movie title or magnet link...": "Τίτλος ταινίας ή magnet link ",
-    "All": "Όλες",
-    "Action": "Δράσης",
-    "Adventure": "Περιπέτειας",
-    "Animation": "Κινούμενα σχέδια",
-    "Comedy": "Κωμωδίες",
-    "Crime": "Έγκλημα",
-    "Documentary": "Ντοκιμαντέρ",
-    "Drama": "Δράμα",
-    "Family": "Οικογενειακές",
-    "Fantasy": "Φαντασίας",
-    "Film-Noir": "Φιλμ-νουάρ",
-    "History": "Ιστορικές",
-    "Horror": "Τρόμου",
-    "Music": "Μουσικές",
-    "Mystery": "Μυστηρίου",
-    "Romance": "Ρομαντικές",
-    "Sci-Fi": "Επιστημονικής Φαντασίας",
-    "Thriller": "Θρίλερ",
-    "Western": "Western",
-    "War": "Πολεμικές",
-    "Musical": "Μουσικές",
-    "Sport": "Αθλητικές",
-    ": Any": ":Οποιαδήποτε",
-    "Date": "Ημερομηνία",
-    "Year": "Χρονολογία",
-    "Rating": "Βαθμολογία",
-    "Alphabetic": "Αλφαβητικά",
-    "Play": "Αναπαραγωγή",
-    "Trailer": "Τρέιλερ",
-    "Torrents": "Torrents",
-    "Most downloaded": "Δημοφιλέστερα",
-    "Science-Fiction": "Επιστημονικής Φαντασίας",
-    "": "",
-    "Indie": "Ανεξάρτητες",
-    "Suspense": "Αγωνίας",
-    "Serie title...": "Τίτλος σειράς...",
-    "Children": "Παιδικές",
-    "Game Show": "Τηλεοπτικά Παιχνίδια",
-    "Home and Garden": "Σπίτι και Κήπος",
-    "Mini Series": "Μίνι Σειρές",
-    "News": "Ειδήσεις",
-    "Reality": "Ριάλιτυ ",
-    "Soap": "Σαπουνόπερες",
-    "Special Interest": "Ειδικού Ενδιαφέροντος",
-    "Talk Show": "Τηλεοπτικές Συζητήσεις",
-    "Updated": "Ενημέρωση",
-    "Name": "Όνομα",
-    "Episode list": "Λίστα Επεισοδίων",
-    "episode": "Επεισόδιο",
-    "season": "σεζόν",
-    "seasons": "σεζόνς",
-    "Ended": "Έληξε",
-    "Continuing": "Συνέχεια",
-    "Connecting": "Σύνδέεται",
-    "Loading from source": "Φόρτωση από την πηγή",
-    "Cancel": "Ακύρωση",
-    "Source": "Πηγή",
-    "Quality": "Ποιότητα",
-    "An error has occured": "Παρουσιάστηκε σφάλμα",
-    "The video player is unable to start the video. You can switch to VLC or select another source from the list.": "Ο video player δεν είναι σε θέση να ξεκινήσει το βίντεο. Μπορείτε να μεταβείτε σε VLC ή επιλέξτε μια άλλη πηγή από τη λίστα.",
-    "Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)": "Σημείωση: Εάν μεταβείτε στο VLC και πάρετε κάποιο μήνυμα του στυλ «δεν ήταν δυνατή η φόρτωση του πρόσθετου» (στα αγγλικά το μήνυμα θα είναι: «Couldn't load plug-in»), θα πρέπει να εγκαταστήσετε την τελευταία έκδοση του VLC (δηλαδή, την τελευταία έκδοση του πρόσθετου, μέσω του browser σας)",
-    "Switch to VLC": "Μετάβαση στον VLC",
-    "Info": "Πληροφορίες",
-    "Switch to Default player": "Μετάβαση στον  Default player",
-    "No sound is playing from the video? You can try using VLC before selecting another source.": "Δεν υπάρχει ήχος όταν παίζει το βίντεο; Μπορείτε να δοκιμάστε να χρησιμοποιήσετε τον VLC πριν επιλέξετε διαφορετική πηγή. ",
-    "Buffering": "Φόρτωση",
-    "You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.": "Στο κάτω μέρος θα δείτε το source section. Πρόκειται για το ένθετο από όπου μπορείτε να επιλέξετε την πηγή που εσείς θέλετε. Είναι ιδιαιτέρως χρήσιμο, σε περίπτωση που δεν μπορείτε να παίξετε το αρχείο από την προεπιλεγμένη πηγή (δηλαδή, από την πηγή που δίνεται από default).",
-    "Play episode": "Αναπαραγωγή επεισοδίου",
-    "Source info": "Πληροφορίες πηγής",
-    "Stop download": "Διακοπή κατεβάσματος",
-    "Episodes": "Επεισόδια",
-    "Season": "Σεζόν",
-    "Episode": "Επεισόδιο",
-    "selected": "επιλεγμένο",
-    "Torrent name...": "Όνομα Torrent",
-    "Seeds": "Seeds",
-    "Leechs": "Leechs",
-    "Lates": "Lates",
-    "Size": "Μέγεθος",
-    "Anime": "Anime",
-    "Videos": "Βίντεο",
-    "Latest": "Τελευταίο",
-    "Added date": "Προσθήκη ημερομηνίας",
-    "Torrent name": "Όνομα Torrent",
-    "Settings": "Ρυθμίσεις",
-    "Science Fiction": "Επιστημονική φαντασία",
-    "Default settings:": "Προεπιλεγμένες ρυθμίσεις:",
-    "Advanced settings:": "Προχωρημένες ρυθμίσεις:",
-    "Language:": "Γλώσσα: ",
-    "Streaming port:": "Streaming θύρα:",
-    "Data directory:": "Κατάλογος δεδομένων:",
-    "Clear data on close:": "Διαγραφή δεδομένων στο κλείσιμο",
-    "Connection limit:": "Όριο σύνδεσης:",
-    "Prefered subtitle:": "Προτιμώμενοι υπότιτλοι:",
-    "Restore defaults": "Επαναφορά προεπιλογών",
-    "Saved": "Αποθηκεύτηκε",
-    "Restored": "Επαναφορά",
-    "All seasons": "Όλες οι σεζόν:",
-    "Buy": "Αγορά",
-    "DHT:": "DHT:",
-    "Random": "Τυχαίο"
+	"Go back": "Πίσω",
+	"Minimize": "Ελαχιστοποίηση",
+	"Toggle fullscreen": "Πλήρης οθόνη",
+	"Close Flixtor": "Κλείσιμο",
+	"You are about to close the application. Are you sure you want to continue?": "Είστε έτοιμοι να κλείσετε την εφαρμογή. <br> Είστε βέβαιοι ότι θέλετε να συνεχίσετε;",
+	"Confirm close": "Επιβεβαίωση κλεισίματος",
+	"Ok": "ΟΚ",
+	"No": "Όχι",
+	"Quit": "Έξοδος",
+	"Movies": "Ταινίες",
+	"Series": "Σειρές",
+	"Movie title or magnet link...": "Τίτλος ταινίας ή magnet link ",
+	"All": "Όλες",
+	"Action": "Δράσης",
+	"Adventure": "Περιπέτειας",
+	"Animation": "Κινούμενα σχέδια",
+	"Comedy": "Κωμωδίες",
+	"Crime": "Έγκλημα",
+	"Documentary": "Ντοκιμαντέρ",
+	"Drama": "Δράμα",
+	"Family": "Οικογενειακές",
+	"Fantasy": "Φαντασίας",
+	"Film-Noir": "Φιλμ-νουάρ",
+	"History": "Ιστορικές",
+	"Horror": "Τρόμου",
+	"Music": "Μουσικές",
+	"Mystery": "Μυστηρίου",
+	"Romance": "Ρομαντικές",
+	"Sci-Fi": "Επιστημονικής Φαντασίας",
+	"Thriller": "Θρίλερ",
+	"Western": "Western",
+	"War": "Πολεμικές",
+	"Musical": "Μουσικές",
+	"Sport": "Αθλητικές",
+	": Any": ":Οποιαδήποτε",
+	"Date": "Ημερομηνία",
+	"Year": "Χρονολογία",
+	"Rating": "Βαθμολογία",
+	"Alphabetic": "Αλφαβητικά",
+	"Play": "Αναπαραγωγή",
+	"Trailer": "Τρέιλερ",
+	"Torrents": "Torrents",
+	"Most downloaded": "Δημοφιλέστερα",
+	"Science-Fiction": "Επιστημονικής Φαντασίας",
+	"": "",
+	"Indie": "Ανεξάρτητες",
+	"Suspense": "Αγωνίας",
+	"Serie title...": "Τίτλος σειράς...",
+	"Children": "Παιδικές",
+	"Game Show": "Τηλεοπτικά Παιχνίδια",
+	"Home and Garden": "Σπίτι και Κήπος",
+	"Mini Series": "Μίνι Σειρές",
+	"News": "Ειδήσεις",
+	"Reality": "Ριάλιτυ ",
+	"Soap": "Σαπουνόπερες",
+	"Special Interest": "Ειδικού Ενδιαφέροντος",
+	"Talk Show": "Τηλεοπτικές Συζητήσεις",
+	"Updated": "Ενημέρωση",
+	"Name": "Όνομα",
+	"Episode list": "Λίστα Επεισοδίων",
+	"episode": "Επεισόδιο",
+	"season": "σεζόν",
+	"seasons": "σεζόνς",
+	"Ended": "Έληξε",
+	"Continuing": "Συνέχεια",
+	"Connecting": "Σύνδέεται",
+	"Loading from source": "Φόρτωση από την πηγή",
+	"Cancel": "Ακύρωση",
+	"Source": "Πηγή",
+	"Quality": "Ποιότητα",
+	"An error has occured": "Παρουσιάστηκε σφάλμα",
+	"The video player is unable to start the video. You can switch to VLC or select another source from the list.": "Ο video player δεν είναι σε θέση να ξεκινήσει το βίντεο. Μπορείτε να μεταβείτε σε VLC ή επιλέξτε μια άλλη πηγή από τη λίστα.",
+	"Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)": "Σημείωση: Εάν μεταβείτε στο VLC και πάρετε κάποιο μήνυμα του στυλ «δεν ήταν δυνατή η φόρτωση του πρόσθετου» (στα αγγλικά το μήνυμα θα είναι: «Couldn't load plug-in»), θα πρέπει να εγκαταστήσετε την τελευταία έκδοση του VLC (δηλαδή, την τελευταία έκδοση του πρόσθετου, μέσω του browser σας)",
+	"Switch to VLC": "Μετάβαση στον VLC",
+	"Info": "Πληροφορίες",
+	"Switch to Default player": "Μετάβαση στον  Default player",
+	"No sound is playing from the video? You can try using VLC before selecting another source.": "Δεν υπάρχει ήχος όταν παίζει το βίντεο; Μπορείτε να δοκιμάστε να χρησιμοποιήσετε τον VLC πριν επιλέξετε διαφορετική πηγή. ",
+	"Buffering": "Φόρτωση",
+	"You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.": "Στο κάτω μέρος θα δείτε το source section. Πρόκειται για το ένθετο από όπου μπορείτε να επιλέξετε την πηγή που εσείς θέλετε. Είναι ιδιαιτέρως χρήσιμο, σε περίπτωση που δεν μπορείτε να παίξετε το αρχείο από την προεπιλεγμένη πηγή (δηλαδή, από την πηγή που δίνεται από default).",
+	"Play episode": "Αναπαραγωγή επεισοδίου",
+	"Source info": "Πληροφορίες πηγής",
+	"Stop download": "Διακοπή κατεβάσματος",
+	"Episodes": "Επεισόδια",
+	"Season": "Σεζόν",
+	"Episode": "Επεισόδιο",
+	"selected": "επιλεγμένο",
+	"Torrent name...": "Όνομα Torrent",
+	"Seeds": "Seeds",
+	"Leechs": "Leechs",
+	"Lates": "Lates",
+	"Size": "Μέγεθος",
+	"Anime": "Anime",
+	"Videos": "Βίντεο",
+	"Latest": "Τελευταίο",
+	"Added date": "Προσθήκη ημερομηνίας",
+	"Torrent name": "Όνομα Torrent",
+	"Settings": "Ρυθμίσεις",
+	"Science Fiction": "Επιστημονική φαντασία",
+	"Default settings:": "Προεπιλεγμένες ρυθμίσεις:",
+	"Advanced settings:": "Προχωρημένες ρυθμίσεις:",
+	"Language:": "Γλώσσα: ",
+	"Streaming port:": "Streaming θύρα:",
+	"Data directory:": "Κατάλογος δεδομένων:",
+	"Clear data on close:": "Διαγραφή δεδομένων στο κλείσιμο",
+	"Connection limit:": "Όριο σύνδεσης:",
+	"Prefered subtitle:": "Προτιμώμενοι υπότιτλοι:",
+	"Restore defaults": "Επαναφορά προεπιλογών",
+	"Saved": "Αποθηκεύτηκε",
+	"Restored": "Επαναφορά",
+	"All seasons": "Όλες οι σεζόν:",
+	"Buy": "Αγορά",
+	"DHT:": "DHT:",
+	"Random": "Τυχαίο",
+	"Cut": "Cut",
+	"Copy": "Αντιγραφή",
+	"Paste": "Επικόλληση",
+	"3D": "3D"
 }
