--- a/locales/nl.json
+++ b/locales/nl.json
@@ -33,7 +33,7 @@
 	"War": "Oorlog",
 	"Musical": "Musical",
 	"Sport": "Sport",
-	": Any": "Alle",
+	": Any": ": Alle",
 	"Date": "Datum",
 	"Year": "Jaar",
 	"Rating": "Beoordeling",
@@ -111,5 +111,9 @@
 	"All seasons": "Alle seizoenen",
 	"Buy": "Kopen",
 	"DHT:": "DHT:",
-	"Random": "Willekeurig"
+	"Random": "Willekeurig",
+	"Cut": "Knippen",
+	"Copy": "Kopieren",
+	"Paste": "Plakken",
+	"3D": "3D"
 }
