Update background transition

--- a/locales/en.json
+++ b/locales/en.json
@@ -115,5 +115,6 @@
 	"Cut": "Cut",
 	"Copy": "Copy",
 	"Paste": "Paste",
-	"3D": "3D"
+	"3D": "3D",
+	"Serie title or magnet link...": "Serie title or magnet link..."
 }
