Add new languages

--- a/locales/fi.json
+++ b/locales/fi.json
@@ -115,5 +115,6 @@
 	"Cut": "Leikkaa",
 	"Copy": "Kopioi",
 	"Paste": "Liitä",
+	"Serie title or magnet link...": "Serie title or magnet link...",
 	"3D": "3D"
 }
