--- a/locales/no.json
+++ b/locales/no.json
@@ -1,7 +1,7 @@
 {
 	"Go back": "Gå tilbake",
 	"Minimize": "Minimer",
-	"Toggle fullscreen": "Toggle fullscreen",
+	"Toggle fullscreen": "Fullskjerm",
 	"Close Flixtor": "Lukk Flixtor",
 	"You are about to close the application. Are you sure you want to continue?": "Du er i ferd med å lukke programmet.<br>Er du sikker på at du vil fortsette?",
 	"Confirm close": "Bekreft lukking",
@@ -49,12 +49,12 @@
 	"Serie title...": "Serie tittel...",
 	"Children": "Barn",
 	"Game Show": "Game Show",
-	"Home and Garden": "Home and Garden",
+	"Home and Garden": "Hus og Hjem",
 	"Mini Series": "Mini Serie",
 	"News": "Nyheter",
 	"Reality": "Reality",
-	"Soap": "Soap",
-	"Special Interest": "Special Interest",
+	"Soap": "Såpeopera",
+	"Special Interest": "Spesielle interesser",
 	"Talk Show": "Talk Show",
 	"Updated": "Oppdatert",
 	"Name": "Navn",
@@ -88,7 +88,7 @@
 	"Torrent name...": "Torrent navn...",
 	"Seeds": "Seeds",
 	"Leechs": "Leechs",
-	"Lates": "Lates",
+	"Lates": "Senere",
 	"Size": "Størrelse",
 	"Anime": "Anime",
 	"Videos": "Videoer",
@@ -115,5 +115,6 @@
 	"Cut": "Klipp ut",
 	"Copy": "Kopier",
 	"Paste": "Lim inn",
+	"Serie title or magnet link...": "Serie title or magnet link...",
 	"3D": "3D"
 }
