--- a/locales/sv.json
+++ b/locales/sv.json
@@ -86,8 +86,8 @@
 	"Episode": "Avsnitt",
 	"selected": "markerad",
 	"Torrent name...": "Torrentnamn...",
-	"Seeds": "Seeds",
-	"Leechs": "Leechs",
+	"Seeds": "Källor",
+	"Leechs": "Klienter",
 	"Lates": "Lates",
 	"Size": "Storlek",
 	"Anime": "Anime",
@@ -99,7 +99,7 @@
 	"Science Fiction": "Science Fiction",
 	"Default settings:": "Default settings:",
 	"Advanced settings:": "Advanced settings:",
-	"Language:": "Language:",
+	"Language:": "Språk:",
 	"Streaming port:": "Streaming port:",
 	"Data directory:": "Data directory:",
 	"Clear data on close:": "Clear data on close:",
@@ -108,12 +108,13 @@
 	"Restore defaults": "Restore defaults",
 	"Saved": "Saved",
 	"Restored": "Restored",
-	"All seasons": "All seasons",
-	"Buy": "Buy",
+	"All seasons": "Alla säsonger",
+	"Buy": "Köp",
 	"DHT:": "DHT:",
 	"Random": "Random",
-	"Cut": "Cut",
-	"Copy": "Copy",
-	"Paste": "Paste",
+	"Cut": "Klipp ut",
+	"Copy": "Kopiera",
+	"Paste": "Klistra in",
+	"Serie title or magnet link...": "Serie title or magnet link...",
 	"3D": "3D"
 }
