--- a/locales/cs.json
+++ b/locales/cs.json
@@ -115,5 +115,6 @@
 	"Cut": "Cut",
 	"Copy": "Copy",
 	"Paste": "Paste",
+	"Serie title or magnet link...": "Serie title or magnet link...",
 	"3D": "3D"
 }
