--- a/locales/gr.json
+++ b/locales/gr.json
@@ -115,5 +115,6 @@
 	"Cut": "Cut",
 	"Copy": "Αντιγραφή",
 	"Paste": "Επικόλληση",
+	"Serie title or magnet link...": "Serie title or magnet link...",
 	"3D": "3D"
 }
