--- a/locales/nl.json
+++ b/locales/nl.json
@@ -115,5 +115,6 @@
 	"Cut": "Knippen",
 	"Copy": "Kopieren",
 	"Paste": "Plakken",
+	"Serie title or magnet link...": "Serie title or magnet link...",
 	"3D": "3D"
 }
