--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,5 +1,5 @@
 {
-    "Go back": "Go back",
+	"Go back": "Go back",
 	"Minimize": "Minimize",
 	"Toggle fullscreen": "Toggle fullscreen",
 	"Close Flixtor": "Close Flixtor",
@@ -115,5 +115,6 @@
 	"Cut": "Cut",
 	"Copy": "Copy",
 	"Paste": "Paste",
+	"Serie title or magnet link...": "Serie title or magnet link...",
 	"3D": "3D"
 }
