Add favorites section

--- a/locales/en.json
+++ b/locales/en.json
@@ -41,6 +41,7 @@
 	"Play": "Play",
 	"Trailer": "Trailer",
 	"Torrents": "Torrents",
+    "Favorites": "Favorites",
 	"Most downloaded": "Most downloaded",
 	"Science-Fiction": "Science-Fiction",
 	"": "",
