Add anime section

--- a/locales/en.json
+++ b/locales/en.json
@@ -41,7 +41,7 @@
 	"Play": "Play",
 	"Trailer": "Trailer",
 	"Torrents": "Torrents",
-    "Favorites": "Favorites",
+	"Favorites": "Favorites",
 	"Most downloaded": "Most downloaded",
 	"Science-Fiction": "Science-Fiction",
 	"": "",
@@ -117,5 +117,49 @@
 	"Copy": "Copy",
 	"Paste": "Paste",
 	"3D": "3D",
-	"Serie title or magnet link...": "Serie title or magnet link..."
+	"Serie title or magnet link...": "Serie title or magnet link...",
+	"popularity": "popularity",
+	"rank": "rank",
+	": All": ": All",
+	"Popularity": "Popularity",
+	"Rank": "Rank",
+	"TV": "TV",
+	"Anime title or magnet link...": "Anime title or magnet link...",
+	"Movie": "Movie",
+	"A": "A",
+	"c": "c",
+	"t": "t",
+	"i": "i",
+	"o": "o",
+	"Supernatural": "Supernatural",
+	"Mecha": "Mecha",
+	"Shounen": "Shounen",
+	"Military": "Military",
+	"Super Power": "Super Power",
+	"Parody": "Parody",
+	"School": "School",
+	"Slice of Life": "Slice of Life",
+	"Cars": "Cars",
+	"Dementia": "Dementia",
+	"Demons": "Demons",
+	"Ecchi": "Ecchi",
+	"Game": "Game",
+	"Harem": "Harem",
+	"Historical": "Historical",
+	"Josei": "Josei",
+	"Kids": "Kids",
+	"Magic": "Magic",
+	"Martial Arts": "Martial Arts",
+	"Police": "Police",
+	"Psychological": "Psychological",
+	"Samurai": "Samurai",
+	"Seinen": "Seinen",
+	"Shoujo": "Shoujo",
+	"Shoujo Ai": "Shoujo Ai",
+	"Shounen Ai": "Shounen Ai",
+	"Space": "Space",
+	"Vampire": "Vampire",
+	"Animes": "Animes",
+	"OVA": "OVA",
+	"ONA": "ONA"
 }
