Add anime filter

--- a/locales/en.json
+++ b/locales/en.json
@@ -161,5 +161,7 @@
 	"Vampire": "Vampire",
 	"Animes": "Animes",
 	"OVA": "OVA",
-	"ONA": "ONA"
+	"ONA": "ONA",
+	"Not Airing": "Not Airing",
+	"Currently Airing": "Currently Airing"
 }
