Add name filter for anime section

--- a/locales/en.json
+++ b/locales/en.json
@@ -163,5 +163,6 @@
 	"OVA": "OVA",
 	"ONA": "ONA",
 	"Not Airing": "Not Airing",
-	"Currently Airing": "Currently Airing"
+	"Currently Airing": "Currently Airing",
+	"name": "name"
 }
