Add update notifier

--- a/locales/en.json
+++ b/locales/en.json
@@ -167,5 +167,9 @@
 	"name": "name",
 	"Movies metadata provider:": "Movies metadata provider:",
 	"Movies metadata:": "Movies metadata:",
-	"Movie metadata:": "Movie metadata:"
+	"Movie metadata:": "Movie metadata:",
+	"A new Flixtor release is available. You can directly download it": "A new Flixtor release is available. You can directly download it",
+	"here": "here",
+	"New Flixtor version": "New Flixtor version",
+	"Eztv is unavailable. Please try it again later": "Eztv is unavailable. Please try it again later"
 }
