--- a/locales/en.json
+++ b/locales/en.json
@@ -171,5 +171,6 @@
 	"A new Flixtor release is available. You can directly download it": "A new Flixtor release is available. You can directly download it",
 	"here": "here",
 	"New Flixtor version": "New Flixtor version",
-	"Eztv is unavailable. Please try it again later": "Eztv is unavailable. Please try it again later"
+	"Eztv is unavailable. Please try it again later": "Eztv is unavailable. Please try it again later",
+	"Trakt service is unavailable. Please try it again later": "Trakt service is unavailable. Please try it again later"
 }
