Update settings section

--- a/locales/en.json
+++ b/locales/en.json
@@ -179,5 +179,6 @@
 	"Yts api endpoint:": "Yts api endpoint:",
 	"Yts is unavailable. Please try it again later": "Yts is unavailable. Please try it again later",
 	"Eztv api endpoint:": "Eztv api endpoint:",
-	"Kickass api endpoint:": "Kickass api endpoint:"
+	"Kickass api endpoint:": "Kickass api endpoint:",
+	"Clear cache": "Clear cache"
 }
