Fix missing movie covers

--- a/locales/en.json
+++ b/locales/en.json
@@ -194,5 +194,8 @@
 	"family": "family",
 	"romance": "romance",
 	"horror": "horror",
-	"documentary": "documentary"
+	"documentary": "documentary",
+	"war": "war",
+	"music": "music",
+	"history": "history"
 }
