--- a/locales/en.json
+++ b/locales/en.json
@@ -116,5 +116,23 @@
 	"Copy": "Copy",
 	"Paste": "Paste",
 	"3D": "3D",
-	"Serie title or magnet link...": "Serie title or magnet link..."
+	"Serie title or magnet link...": "Serie title or magnet link...",
+	"drama": "drama",
+	"mystery": "mystery",
+	"thriller": "thriller",
+	"adventure": "adventure",
+	"fantasy": "fantasy",
+	"science-fiction": "science-fiction",
+	"tv-movie": "tv-movie",
+	"action": "action",
+	"crime": "crime",
+	"animation": "animation",
+	"comedy": "comedy",
+	"family": "family",
+	"romance": "romance",
+	"horror": "horror",
+	"war": "war",
+	"western": "western",
+	"music": "music",
+	"history": "history"
 }
