Fix missing tv covers

--- a/locales/en.json
+++ b/locales/en.json
@@ -180,5 +180,23 @@
 	"Yts is unavailable. Please try it again later": "Yts is unavailable. Please try it again later",
 	"Eztv api endpoint:": "Eztv api endpoint:",
 	"Kickass api endpoint:": "Kickass api endpoint:",
-	"Clear cache": "Clear cache"
+	"Clear cache": "Clear cache",
+	"drama": "drama",
+	"mystery": "mystery",
+	"thriller": "thriller",
+	"action": "action",
+	"war": "war",
+	"comedy": "comedy",
+	"romance": "romance",
+	"adventure": "adventure",
+	"fantasy": "fantasy",
+	"science-fiction": "science-fiction",
+	"crime": "crime",
+	"tv-movie": "tv-movie",
+	"animation": "animation",
+	"family": "family",
+	"horror": "horror",
+	"music": "music",
+	"western": "western",
+	"history": "history"
 }
